apps/services/garage/service-garage-rpc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: garage-rpc
  namespace: garage
spec:
  selector:
    app: garage
  ports:
    - name: rpc
      protocol: TCP
      port: 3901
      targetPort: 3901
  clusterIP: None  # Headless service for StatefulSet
