apps/services/garage/service-garage-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: garage-web
  namespace: garage
spec:
  selector:
    app: garage
  ports:
    - name: web
      protocol: TCP
      port: 3902
      targetPort: 3902
  type: ClusterIP
